--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <section id="home" data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h2>Sistema de control</h2>
                     <h4>distribuido para</h4>
-                    <h3>maquinas caminantes</h3>
+                    <h3>máquinas caminantes</h3>
                     <p>
                         <small>
                             <a href="mailto:me@xcancerberox.com.ar">Joaquin de Andres y Martinez de Arenasa</a><sup class=superscript>a</sup>,
@@ -96,14 +96,14 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="slide-in fade-out">
-                    <h2>Presentacion del estudio</h2>
+                    <h2>Presentación del estudio</h2>
                     <aside class="notes">
                         <p>
                         </p>
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="fade-in slide-out">
-                    <h3>Presentacion del estudio</h3>
+                    <h3>Presentación del estudio</h3>
                     <div style="position:relative" >
                         <p class="fragment fade-in" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="0">
                             <img src="images/presentacion_del_estudio_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
@@ -147,7 +147,7 @@
                         <img src="images/modos_de_caminar_3.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                     </p>
                     <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="6">
-                        <h4>Wave gait - Definicion</h4>
+                        <h4>Wave gait - Definición</h4>
                         <p>
                             \[\begin{aligned}
                             \phi_{2m+1} &amp; = F(m\beta),
@@ -160,10 +160,10 @@
                            style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; font-size: 50%;" data-fragment-index="6">
                             \[\begin{aligned}
                             \phi_{2m+1} &amp; : \text{Fase de la pata } 2m+1\\ 
-                            m &amp; : \text{Indice de la pata} \\
+                            m &amp; : \text{Índice de la pata} \\
                             2n &amp; : \text{Cantidad de patas} \\
                             \beta &amp; : \text{Factor de trabajo} \\
-                            F &amp; : \text{Funcion fraccional}
+                            F &amp; : \text{Función fraccional}
                             \end{aligned} \]
                         </p>
                     </div>
@@ -236,9 +236,9 @@
                             \[\begin{aligned}
                             F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : \text{Grados de libertad del espacio de trabajo} \\
-                            n &amp; : \text{Numero de vínculos} \\
-                            j &amp; : \text{Numero de articulaciones} \\
-                            f_i &amp; : \text{Libertades de cada articulacion}
+                            n &amp; : \text{Número de vínculos} \\
+                            j &amp; : \text{Número de articulaciones} \\
+                            f_i &amp; : \text{Libertades de cada articulación}
                             \end{aligned} \]
                         </p>
                     </div>
@@ -254,7 +254,7 @@
                             \[\begin{aligned}
                             F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : 6 \\
-                            n &amp; : 2 \text{ vinculos } * 3 \text{ miembros } + 2 \text{ vinculos base } = 8 \\
+                            n &amp; : 2 \text{ vínculos } * 3 \text{ miembros } + 2 \text{ vínculos base } = 8 \\
                             j &amp; : 9 (j_1= 6 \text{ articulaciones 1gdl; } j_3= 3 \text{ articulaciones 3gdl}) \\
                             f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
                             \end{aligned} \]
@@ -272,7 +272,7 @@
                             \[\begin{aligned}
                             F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : 6 \\
-                            n &amp; : 2 \text{ vinculos } * 4 \text{ miembros } + 2 \text{ vinculos base } = 10 \\
+                            n &amp; : 2 \text{ vínculos } * 4 \text{ miembros } + 2 \text{ vínculos base } = 10 \\
                             j &amp; : 12 (j_1= 8 \text{ articulaciones 1gdl; } j_3= 4 \text{ articulaciones 3gdl }) \\
                             f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
                             \end{aligned} \]
@@ -290,7 +290,7 @@
                             \[\begin{aligned}
                             F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : 6 \\
-                            n &amp; : 3 \text{ vinculos } * 3 \text{ miembros } + 2 \text{ vinculos base } = 11 \\
+                            n &amp; : 3 \text{ vínculos } * 3 \text{ miembros } + 2 \text{ vínculos base } = 11 \\
                             j &amp; : 12 (j_1= 9 \text{ articulaciones 1gdl; } j_3= 3 \text{ articulaciones 3gdl}) \\
                             f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
                             \end{aligned} \]
@@ -308,7 +308,7 @@
                             \[\begin{aligned}
                             F &amp; : \text{Grados de libertad del mecanismo} \\ 
                             \lambda &amp; : 6 \\
-                            n &amp; : 3 \text{ vinculos } * k \text{ miembros } + 2 \text{ vinculos base } = 3k + 2 \\
+                            n &amp; : 3 \text{ vínculos } * k \text{ miembros } + 2 \text{ vínculos base } = 3k + 2 \\
                             j &amp; : 4k (j_1= 3k \text{ articulaciones 1gdl; } j_3= k \text{ articulaciones 3gdl }) \\
                             f_i &amp; : 1 \text{ para } j_1 \text{ y } 3 \text{ para } j_3 
                             \end{aligned} \]
@@ -343,7 +343,7 @@
                         </p>
                     </div>
                     <div class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="6">
-                        <h4>Patron de soporte</h4>
+                        <h4>Patrón de soporte</h4>
                         <p>
                             <img src="images/estabilidad_margen_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                         </p>
@@ -391,8 +391,8 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Generacion de trayectorias</h3>
-                    <h4>Interpolacion parabolica-lineal</h4>
+                    <h3>Generación de trayectorias</h3>
+                    <h4>Interpolación parabólica-lineal</h4>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
                         <img src="images/trayectoriaacc_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
                     </p>
@@ -414,9 +414,9 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Cinematica del robot</h3>
-                    <li>Cinematica inversa del cuerpo con N patas en soporte</li>
-                    <li>Cinematica inversa de las patas en transferencia</li>
+                    <h3>Cinemática del robot</h3>
+                    <li>Cinemática inversa del cuerpo con N patas en soporte</li>
+                    <li>Cinemática inversa de las patas en transferencia</li>
                     <aside class="notes">
                         <p>
                         Una vez definidos los puntos por los que tiene que
@@ -430,7 +430,7 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Cinematica del robot</h3>
+                    <h3>Cinemática del robot</h3>
                     <h4>Patas en transferencia - Denavit-Hartenberg</h4>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
                         <img src="images/tramaspata3dof_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
@@ -512,7 +512,7 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Cinematica del robot</h3>
+                    <h3>Cinemática del robot</h3>
                     <h4>Cuerpo con N patas en soporte</h4>
                     <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="1">
                         <img src="images/caminantecomplejocinematica_0.png" width="70%" height="70%" style="background:none; border:none; box-shadow:none;">
@@ -542,14 +542,14 @@
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="slide-in fade-out">
-                    <h2>Realizacion practica</h2>
+                    <h2>Realización práctica</h2>
                     <aside class="notes">
                         <p>
                         </p>
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%" data-transition="fade-in slide-out">
-                    <h3>Realizacion practica</h3>
+                    <h3>Realización práctica</h3>
                     <div style="position:relative" >
                         <p class="fragment fade-in-then-out" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0;" data-fragment-index="0">
                             <img src="images/realizacion_practica_0.png" width="50%" height="50%" style="background:none; border:none; box-shadow:none;">
@@ -688,7 +688,7 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Sistema de control distribuido</h3>
-                    <img src="images/sistema_de_control.png" width="45%" height="45%" style="background:none; border:none; box-shadow:none;">
+                    <img src="images/sistema_de_control.png" width="65%" height="65%" style="background:none; border:none; box-shadow:none;">
                     <aside class="notes">
                         <p>
                         </p>
@@ -721,24 +721,27 @@
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
                     <h3>Conclusiones</h3>
-                    <li> Se mostraron los pasos necesarios para generar un movimiento </li> 
-                    <li> Se detalló la matemática necesaria para conseguir los angulos </li> 
-                    <li> Se desarrollo un software para probar los algoritmos visualizandolos y comparandolos</li>
-                    <li> Se utilizo el mismo sofware para probar los algorimos en maquinas caminantes</li>
+                    <div style="font-size: 70%;">
+                        <li> Se mostraron los pasos necesarios para generar un movimiento </li> 
+                        <li> Se detalló la matemática necesaria para conseguir los ángulos </li> 
+                        <li> Se desarrolló un software para probar los algoritmos visualizándolos y comparándolos</li>
+                        <li> Se utilizó el mismo sofware para probar los algorimos en máquinas caminantes</li>
+                        <li> Se presentaron dos paper en distintas conferencias</li>
+                    </div>
                     <aside class="notes">
                         <p>
                         </p>
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Preguntas?</h3>
+                    <h3>¿Preguntas?</h3>
                     <aside class="notes">
                         <p>
                         </p>
                     </aside>
                 </section>
                 <section data-background="images/fiuba-blanco.png" data-background-size="200px" data-background-position="95% 5%">
-                    <h3>Muchas gracias/h3>
+                    <h3>Muchas gracias</h3>
                     <aside class="notes">
                         <p>
                         </p>
